fix: use !important to set z-index for hubspot messages

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,5 +40,5 @@ body {
 }
 
 #hubspot-messages-iframe-container {
-  z-index: 10;
+  z-index: 10 !important;
 }
